--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,14 +7,20 @@
         android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         android:orderInCategory="100"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_reload" />
 
     <item
+        android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        android:orderInCategory="200"
+        app:showAsAction="never" />
+
+    <!--<item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="200"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_settings" />
+        android:icon="@drawable/ic_action_settings" />-->
 
 </menu>
