--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="@string/hint_password"/>
+                android:hint="@string/hint_password" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
@@ -60,6 +60,15 @@
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="@string/button_login"/>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_gravity="center_horizontal"
+            android:indeterminate="true"
+            android:visibility="gone"/>
 
     </LinearLayout>
 </ScrollView>
