--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,7 +29,12 @@
             <EditText android:id="@+id/input_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_login" />
+                android:hint="@string/hint_login"
+                android:inputType="text"
+                android:imeOptions="actionNext"
+                android:imeActionId="@+id/input_password"
+                android:nextFocusDown="@+id/input_password"
+                android:nextFocusForward="@+id/input_password" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
@@ -42,7 +47,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="@string/hint_password" />
+                android:hint="@string/hint_password"
+                android:maxLines="1"
+                android:imeOptions="actionSend"
+                android:nextFocusDown="@+id/btn_login"
+                android:nextFocusForward="@+id/btn_login" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
