--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:gravity="center">
 
         <TextView
             android:layout_width="match_parent"
@@ -49,9 +50,10 @@
                 android:inputType="textPassword"
                 android:hint="@string/hint_password"
                 android:maxLines="1"
-                android:imeOptions="actionSend"
-                android:nextFocusDown="@+id/btn_login"
-                android:nextFocusForward="@+id/btn_login" />
+                android:imeOptions="actionNext"
+                android:imeActionId="@+id/checkBox"
+                android:nextFocusDown="@+id/checkBox"
+                android:nextFocusForward="@+id/checkBox" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
@@ -61,6 +63,31 @@
             android:gravity="center"
             android:textColor="@color/colorError"/>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:text="@string/checkbox_rules"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox"
+                android:nextFocusDown="@+id/btn_login"
+                android:nextFocusForward="@+id/btn_login"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="@string/text_rules"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_weight="1"
+                android:textColor="#0000ff" />
+        </LinearLayout>
+
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
@@ -68,7 +95,8 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="@string/button_login"/>
+            android:text="@string/button_login"
+            android:enabled="false" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleLarge"
