--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,8 +19,14 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="200"
+        android:orderInCategory="300"
         app:showAsAction="never"
         android:icon="@drawable/ic_action_settings"/>
+
+    <item
+        android:id="@+id/action_info"
+        android:title="@string/action_info"
+        android:orderInCategory="400"
+        app:showAsAction="never" />
 
 </menu>
