--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,7 +11,7 @@
 
     <PreferenceCategory android:title="@string/pref_cat_bug">
         <CheckBoxPreference
-            android:key="acra"
+            android:key="acra.enable"
             android:title="@string/pref_title_acra"
             android:summary="@string/pref_description_acra"
             android:defaultValue="false" />
