--- a/app/src/main/res/values/rules.xml
+++ b/app/src/main/res/values/rules.xml
@@ -27,6 +27,7 @@
         <h2>1.0 beta 3 (2016-11-04)</h2>
         <p>
           <strong>Fix:</strong> stuck after login<br>
+          <strong>Fix:</strong> crash after logout and login with invalid credentials<br>
           <strong>New:</strong> preference improvements
         </p>
         <h2>1.0 beta 2 (2016-11-03)</h2>
