Move logout button to Settings activity

--- a/app/src/main/res/values-pl/rules.xml
+++ b/app/src/main/res/values-pl/rules.xml
@@ -28,7 +28,8 @@
         <p>
           <strong>Naprawione:</strong> odświeżanie listy książek po zalogowaniu się<br>
           <strong>Naprawione:</strong> błąd po wylogowaniu się i ponownym zalogowaniu się z błędnym hasłem<br>
-          <strong>Nowe:</strong> dodatkowe możliwości konfiguracyjne
+          <strong>Nowe:</strong> dodatkowe możliwości konfiguracyjne<br>
+          <strong>Zmienione:</strong> przeniesienie opcji wylogowania się do okna Ustawienia
         </p>
         <h2>1.0 beta 2 (2016-11-03)</h2>
         <p>
