--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,6 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory android:title="@string/pref_cat_general">
+        <Preference
+            android:title="@string/pref_title_logout"
+            android:key="button"
+            android:summary="@string/pref_description_logout" />
+
         <CheckBoxPreference
                 android:key="autoprolong"
                 android:title="@string/pref_title_autoprolong"
